# ICB-WEB-QA

./: .env_template  .gitignore  pyproject.toml
.github/workflows/: Automation_Tests_ICB.yml  test.yml
src/icb_qa_automation/: main.py
src/test_game_menu_page/: test_game_menu_page.py
src/test_homepage/: test_homepage.py
src/test_shop/: test_shop.py
src/utils/: utils.py
